--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body{
     width: 100%;
 }
 
+.principal{
+    background: #CCCCCC;
+    padding: 20px;
+}
+
 h1{
     text-align: center;
 
@@ -21,4 +26,28 @@ em strong{
 
 #mision{
     font-size: 20px;
+}
+
+.diferenciales{
+    background: #FFFFFF;
+}
+
+h2{
+    text-align: center;
+}
+
+.items{
+    font-style: italic;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 25%;
+    margin-right: 15%;
+    
+}
+
+.imagenDiferenciales{
+    width: 50%;
 }
