--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
     background: #CCCCCC;
 } 
 
+.tituloPrincipal{
+    padding-left: 30px;
+}
+
 #banner{
     width: 100%;
 }
@@ -11,10 +15,10 @@ body{
     padding: 20px;
 }
 
-h1{
+.tituloCentralizado{
     text-align: center;
-
 }
+
 p{
     text-align: center;
     
@@ -32,9 +36,7 @@ em strong{
     background: #FFFFFF;
 }
 
-h2{
-    text-align: center;
-}
+
 
 .items{
     font-style: italic;
