--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body{
-    background: #CCCCCC;
-} 
-
 .tituloPrincipal{
     padding-left: 30px;
 }
@@ -34,9 +30,8 @@ em strong{
 
 .diferenciales{
     background: #FFFFFF;
+    padding: 30px;
 }
-
-
 
 .items{
     font-style: italic;
