--- a/productos.css
+++ b/productos.css
@@ -1,5 +1,18 @@
 header{
     background: #BBBBBB;
+    padding: 20px 0;
+}
+
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    right:0px ;
+    top: 110px;
 }
 
 nav li{
