--- a/productos.css
+++ b/productos.css
@@ -1,5 +1,5 @@
-header{
-    background: #BBBBBB;
+header {
+    background-color: #BBBBBB;
     padding: 20px 0;
 }
 
@@ -11,12 +11,12 @@ header{
 
 nav{
     position: absolute;
-    right:0px ;
-    top: 110px;
+    top:110px;
+    right: 0;
 }
 
 nav li{
-    display: inline-block;
+    display: inline;
     margin: 0 0 0 15px;
 }
 
@@ -25,32 +25,51 @@ nav a{
     color: #000000;
     font-weight: bold;
     font-size: 22px;
-    text-decoration:none;
+    text-decoration: none;
 }
 
-.productos {
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+
+.productos{
     width: 940px;
     margin: 0 auto;
     padding: 50px;
 }
 
+
 .productos li{
     display: inline-block;
     text-align: center;
-    width: 30% ;
+    width: 30%;
     vertical-align: top;
     margin: 0 1.5%;
-    padding:30px 20px ;
-    box-sizing:  border-box;
+    padding: 30px 20px;
+    box-sizing: border-box;
     border: 2px solid #000000;
-    border-radius: 10px ;
+    border-radius: 10px;
+}
+
+.productos li:hover{
+    border-color: #c78c19 ;
+}
+
+.productos li:active{
+    border-color: #088c19;
+
 }
 
 .productos h2{
     font-size: 30px;
     font-weight: bold;
-    
 }
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
 
 .productoDescripcion{
     font-size: 18px;
@@ -59,5 +78,5 @@ nav a{
 .productoPrecio{
     font-size: 20px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top:10px;
 }
