--- a/style.css
+++ b/style.css
@@ -92,3 +92,25 @@ footer{
     font-size: 16px;
     margin: 20px;
 }
+
+main{
+    width: 940;
+    max-width: 0 auto;
+}
+
+form{
+    margin:40px 0;
+}
+
+form label{
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+form input{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px ;
+    width: 50%;
+}
