--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+
+      font-family: "Montserrat", sans-serif;
+  
+}
+
 header {
     background-color: #BBBBBB;
     padding: 20px 0;
@@ -162,7 +168,7 @@ td,th{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
-    claear:left
+    clear:left
 }
 
 .principal p{
@@ -184,7 +190,19 @@ td,th{
     margin: 0 20px 20px 0;
 }
 
+.mapa{
+    padding: 3em 0;
+}
+
+.mapa p{
+    margin: 0 0 2em ;
+    text-align: center;
+}
 .imagenDiferenciales{
     width: 60%;
 }
 
+.video{
+    width: 560px;
+    margin: 1em auto;
+}
