--- a/style.css
+++ b/style.css
@@ -99,10 +99,7 @@ footer{
     margin: 20px;
 }
 
-main{
-    width: 940px;
-    margin: 0 auto;
-}
+
 
 form{
     margin:40px 0;
@@ -139,7 +136,7 @@ form label, form legend{
 }
 
 .enviar:hover{
-    background: orange ;
+    background: darkorange ;
     transform: scale(1.2);
 }
 
@@ -164,11 +161,18 @@ td,th{
     width: 100%;
 }
 
+.principal{
+    padding: 3em 0;
+    background: #FFFFFF;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .titulo-principal{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
-    clear:left
+    clear:left;
 }
 
 .principal p{
@@ -192,13 +196,48 @@ td,th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE,#888888)
 }
 
 .mapa p{
     margin: 0 0 2em ;
     text-align: center;
 }
-.imagenDiferenciales{
+
+.mapa-contenido{
+    width: 940px;
+    margin:0 auto ;
+}
+
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+}
+
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items{
+    line-height: 1.5;
+}
+
+.items:before{
+    content:"★"
+}
+
+.items:first-child{
+    font-weight: bold;
+}
+
+.imagen-diferenciales{
     width: 60%;
 }
 
@@ -206,3 +245,4 @@ td,th{
     width: 560px;
     margin: 1em auto;
 }
+
